--- a/CGPI Calculator/src/cgpi/sign_in.form
+++ b/CGPI Calculator/src/cgpi/sign_in.form
@@ -27,71 +27,71 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+        <Group type="102" attributes="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+            <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="139" max="-2" attributes="0"/>
+              <Component id="jLabel2" min="-2" pref="316" max="-2" attributes="0"/>
+            </Group>
+            <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="139" max="-2" attributes="0"/>
-                      <Component id="jLabel2" min="-2" pref="316" max="-2" attributes="0"/>
+                <Group type="102" attributes="0">
+                  <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                    <Component id="jPasswordField1" min="-2" pref="159" max="-2" attributes="0"/>
+                    <Component id="jTextField1" min="-2" pref="159" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jPasswordField1" min="-2" pref="159" max="-2" attributes="0"/>
-                                  <Component id="jTextField1" min="-2" pref="159" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="sin" min="-2" pref="118" max="-2" attributes="0"/>
-                                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                                      <Component id="jLabel3" min="-2" pref="72" max="-2" attributes="0"/>
-                                      <Component id="jLabel1" min="-2" pref="105" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
-                              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                              <Component id="sup" min="-2" pref="118" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="jLabel4" alignment="0" min="-2" pref="318" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                              <Component id="jLabel5" min="-2" pref="135" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
+                </Group>
+                <Group type="102" attributes="0">
+                  <Group type="103" groupAlignment="1" attributes="0">
+                    <Component id="sin" min="-2" pref="118" max="-2" attributes="0"/>
+                    <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                      <Component id="jLabel3" min="-2" pref="72" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" pref="105" max="-2" attributes="0"/>
+                    </Group>
                   </Group>
+                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="sup" min="-2" pref="118" max="-2" attributes="0"/>
+                </Group>
+                <Component id="jLabel4" alignment="0" min="-2" pref="318" max="-2" attributes="0"/>
+                <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                  <Component id="jLabel5" min="-2" pref="135" max="-2" attributes="0"/>
+                </Group>
               </Group>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+            </Group>
           </Group>
+          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+        </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel4" min="-2" pref="36" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel1" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-                  <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel3" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-                  <Component id="jPasswordField1" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="33" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="sin" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                  <Component id="sup" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-              <Component id="jLabel2" min="-2" pref="46" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+        <Group type="102" alignment="0" attributes="0">
+          <EmptySpace max="-2" attributes="0"/>
+          <Component id="jLabel4" min="-2" pref="36" max="-2" attributes="0"/>
+          <EmptySpace type="separate" max="-2" attributes="0"/>
+          <Group type="103" groupAlignment="3" attributes="0">
+            <Component id="jLabel1" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+            <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
           </Group>
+          <EmptySpace max="-2" attributes="0"/>
+          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+          <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+          <Group type="103" groupAlignment="3" attributes="0">
+            <Component id="jLabel3" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+            <Component id="jPasswordField1" alignment="3" min="-2" max="-2" attributes="0"/>
+          </Group>
+          <EmptySpace pref="33" max="32767" attributes="0"/>
+          <Group type="103" groupAlignment="3" attributes="0">
+            <Component id="sin" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+            <Component id="sup" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+          </Group>
+          <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+          <Component id="jLabel2" min="-2" pref="46" max="-2" attributes="0"/>
+          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+        </Group>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -104,8 +104,7 @@
         <Property name="text" type="java.lang.String" value="ROLL NUMBER"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel2">
-    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel2"></Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -114,8 +113,7 @@
         <Property name="text" type="java.lang.String" value="PASSWORD"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JPasswordField" name="jPasswordField1">
-    </Component>
+    <Component class="javax.swing.JPasswordField" name="jPasswordField1"></Component>
     <Component class="javax.swing.JTextField" name="jTextField1">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
