--- a/CGPI Calculator/src/cgpi/sign_up.form
+++ b/CGPI Calculator/src/cgpi/sign_up.form
@@ -27,78 +27,78 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="159" max="-2" attributes="0"/>
-                      <Component id="new_acc" min="-2" pref="183" max="-2" attributes="0"/>
+        <Group type="102" attributes="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+            <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="159" max="-2" attributes="0"/>
+              <Component id="new_acc" min="-2" pref="183" max="-2" attributes="0"/>
+            </Group>
+            <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                <Component id="jLabel1" max="32767" attributes="0"/>
+                <Group type="102" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                    <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="rno" max="32767" attributes="0"/>
+                      <Component id="cpwd" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="pwd" alignment="0" min="-2" pref="78" max="-2" attributes="0"/>
+                      <Component id="fname" alignment="0" min="-2" pref="78" max="-2" attributes="0"/>
+                    </Group>
+                    <Component id="jLabel5" min="-2" pref="135" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jLabel1" max="32767" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="rno" max="32767" attributes="0"/>
-                                      <Component id="cpwd" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="pwd" alignment="0" min="-2" pref="78" max="-2" attributes="0"/>
-                                      <Component id="fname" alignment="0" min="-2" pref="78" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="jLabel5" min="-2" pref="135" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="tpwd" max="32767" attributes="0"/>
-                                  <Component id="tcpwd" max="32767" attributes="0"/>
-                                  <Component id="tfname" max="32767" attributes="0"/>
-                                  <Component id="trno" min="-2" pref="135" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="error" max="32767" attributes="0"/>
-                      </Group>
+                  <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                    <Component id="tpwd" max="32767" attributes="0"/>
+                    <Component id="tcpwd" max="32767" attributes="0"/>
+                    <Component id="tfname" max="32767" attributes="0"/>
+                    <Component id="trno" min="-2" pref="135" max="-2" attributes="0"/>
                   </Group>
+                </Group>
+                <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
+                <Component id="error" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="242" max="32767" attributes="0"/>
+            </Group>
           </Group>
+          <EmptySpace pref="242" max="32767" attributes="0"/>
+        </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="28" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="error" min="-2" pref="15" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="fname" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfname" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="rno" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="trno" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="pwd" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="tpwd" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="cpwd" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="tcpwd" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Component id="new_acc" min="-2" pref="34" max="-2" attributes="0"/>
-              <EmptySpace pref="53" max="32767" attributes="0"/>
+        <Group type="102" alignment="0" attributes="0">
+          <EmptySpace max="-2" attributes="0"/>
+          <Component id="jLabel1" min="-2" pref="28" max="-2" attributes="0"/>
+          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+          <Component id="error" min="-2" pref="15" max="-2" attributes="0"/>
+          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+          <Group type="103" groupAlignment="3" attributes="0">
+            <Component id="fname" alignment="3" min="-2" max="-2" attributes="0"/>
+            <Component id="tfname" alignment="3" min="-2" max="-2" attributes="0"/>
           </Group>
+          <EmptySpace max="-2" attributes="0"/>
+          <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+          <Group type="103" groupAlignment="3" attributes="0">
+            <Component id="rno" alignment="3" min="-2" max="-2" attributes="0"/>
+            <Component id="trno" alignment="3" min="-2" max="-2" attributes="0"/>
+          </Group>
+          <EmptySpace max="-2" attributes="0"/>
+          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+          <EmptySpace type="separate" max="-2" attributes="0"/>
+          <Group type="103" groupAlignment="3" attributes="0">
+            <Component id="pwd" alignment="3" min="-2" max="-2" attributes="0"/>
+            <Component id="tpwd" alignment="3" min="-2" max="-2" attributes="0"/>
+          </Group>
+          <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+          <Group type="103" groupAlignment="3" attributes="0">
+            <Component id="cpwd" alignment="3" min="-2" max="-2" attributes="0"/>
+            <Component id="tcpwd" alignment="3" min="-2" max="-2" attributes="0"/>
+          </Group>
+          <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+          <Component id="new_acc" min="-2" pref="34" max="-2" attributes="0"/>
+          <EmptySpace pref="53" max="32767" attributes="0"/>
+        </Group>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -146,19 +146,15 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="new_accActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JPasswordField" name="tpwd">
-    </Component>
-    <Component class="javax.swing.JPasswordField" name="tcpwd">
-    </Component>
+    <Component class="javax.swing.JPasswordField" name="tpwd"></Component>
+    <Component class="javax.swing.JPasswordField" name="tcpwd"></Component>
     <Component class="javax.swing.JTextField" name="tfname">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfnameActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="trno">
-    </Component>
-    <Component class="javax.swing.JLabel" name="error">
-    </Component>
+    <Component class="javax.swing.JTextField" name="trno"></Component>
+    <Component class="javax.swing.JLabel" name="error"></Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
